더 할게 없다...

--- a/techsem.html
+++ b/techsem.html
@@ -7,7 +7,9 @@
     <li>점심을 주문한다</li>
     <li>법카로 결제한다</li>
     <li>맛있게 먹는다</li>
+    <li>맛이 없으면 환불한다</li>
     <li>재무팀에 영수증을 드린다</li>
+    <li>월말에 정산을 한다</li>
   </ul>
 </body>
 </html>
