제목을 써볼까요

--- a/techsem.html
+++ b/techsem.html
@@ -3,6 +3,7 @@
   <title>점심 먹기</title>
 </head>
 <body>
+  <h1>기술세미나</h1>
   <ul>
     <li>점심을 주문한다</li>
     <li>법카로 결제한다</li>
@@ -12,6 +13,7 @@
     <li>재무팀에 영수증을 드린다</li>
     <li>월말에 정산을 한다</li>
   </ul>
+  <h1>출장</h1>
   <ul>
     <li>출장가서 점심을 주문한다</li>
     <li>내 카드로 결제한다</li>
