--- a/techsem.html
+++ b/techsem.html
@@ -18,6 +18,7 @@
     <li>출장가서 점심을 주문한다</li>
     <li>내 카드로 결제한다</li>
     <li>재무팀에 영수증을 드린다</li>
+    <li>월말에 정산을 한다</li>
   </ul>
 </body>
 </html>
